--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 tensorflow==2.7.0
 tensorflow-addons==0.15.0
 tensorflow-probability==0.15.0
-tensorflow_text==2.7.0
+tensorflow_text
 keras==2.7.0
 scikit-image
 scikit-learn
@@ -9,5 +9,4 @@ scipy
 six
 numpy
 PyYAML
-git+git://github.com/deepmind/dmvr.git
 absl-py
